# dpkg

./: .cvsignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .log.30288  .mailmap  ABOUT-NLS  AUTHORS  ChangeLog  ChangeLog.old  Feature.mk  Makecheck.am  Makefile  Makefile.am  Makefile.conf.in  Makefile.in  NEWS  README  README.api  README.feature-removal-schedule  README.l10n  README.translators  THANKS  TODO  Test.mk  abitable  acconfig.h  aclocal.m4  archtable  autogen  autogen.sh  check.am  config.guess  config.h.bot  config.h.in  config.sub  configure  configure.ac  configure.in  (+21 more)
doc/: .cvsignore  .gitignore  ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  README.api  README.feature-removal-schedule  changelog  coding-style.txt  database-structure.fig  deb-control.5  deb-old.5  deb.5  dependency-ordering.txt  developer-keys.bak  developer-keys.pgp  diversions.text  essential-flag.txt  frontend.txt  guidelines.info-1  guidelines.info-2  guidelines.texi  guidelines.texi.beforeeric  guidelines.texi.rej  internals.sgml  junk  lcov-epilog  lcov-inject  lcov-inject.pl  lcov-prolog  lout.li  maintainer-script-args.txt  manuals-version  policy.lout  policy.lout.ld  policy.ps  policy.ps1  policy.sasp  policy.sasp-lout  (+16 more)
doc/de/: Makefile.in
doc/en/: reference.sgml
doc/fr/: Makefile.in  cleanup-info.8  deb-control.5  dpkg-deb.1  dpkg-divert.8  dpkg-name.1  dpkg-query.8  dpkg-scanpackages.8  dpkg-scansources.1  dpkg-scansources.8  dpkg-source.1  dpkg-split.8  dpkg.8  install-info.8  start-stop-daemon.8  update-alternatives.8  (+1 more)
dpkg-deb/: .gitignore  Makefile  Makefile.am  Makefile.in  build.c  debugmake  dpkg-deb.1  dpkg-deb.8  dpkg-deb.8-vuori  dpkg-deb.h  extract.c  info.c  main.c  mkdeb.sh
dpkg-split/: .gitignore  Makefile.am  Makefile.in  dpkg-split.h  info.c  join.c  main.c  mksplit.pl  queue.c  split.c
dselect/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  basecmds.cc  baselist.cc  basetop.cc  bindings.cc  bindings.h  checkunimp.pl  curkeys.cc  cxx-support.cc  debugmake  dselect-curses.h  dselect.8  dselect.h  helpmsgs.cc  helpmsgs.h  helpmsgs.src  keyoverride  keys.c  kt.cc  main.cc  methkeys.cc  methlist.cc  method.cc  method.h  methparse.cc  mkcurkeys.pl  mkhelpmsgs.pl  pkgcmds.cc  pkgdepcon.cc  pkgdisplay.cc  pkginfo.cc  pkgkeys.cc  pkglist.cc  pkglist.h  pkgsublist.cc  pkgtop.cc  (+2 more)
getopt/: Makefile.am  Makefile.in  getopt.c  long-options.c
include/: Makefile  Makefile.am  Makefile.in  dpkg-db.h  dpkg.h  dpkg.h.in  myopt.h  parsedump.h  tarfn.h
lib/: .gitignore  Makefile  Makefile.am  Makefile.in  cleanup.c  compat.c  compression.c  database.c  dbmodify.c  debugmake  dlist.h  dpkg-db.h  dpkg-def.h  dpkg-priv.h  dpkg.h  dump.c  ehandle.c  fields.c  lock.c  log.c  maintscript-helper  md5.c  md5.h  mlib.c  myopt-util.c  myopt.c  myopt.h  nfmalloc.c  parse.c  parsedump.h  parsehelp.c  path.c  progress.c  progress.h  showcright.c  showpkg.c  sta00630  sta11978  star.c  startup.c  (+9 more)
libcompat/: .gitignore  Makefile.am  alphasort.c  compat.h  error.h  gettext.h  scandir.c  snprintf.c  strerror.c  strsignal.c  unsetenv.c  vsnprintf.c
main/: Makefile  Makefile.am  Makefile.in  archives.c  archives.h  archtable.inc  cleanup.c  configure.c  debugmake  depcon.c  dpkg-query.8  dpkg.8  dpkg.8-null  dpkg.8-vuori  enquiry.c  errors.c  filesdb.c  filesdb.h  help.c  junk  main.c  main.h  packages.c  processarc.c  query.c  query.h  remove.c  select.c  showpkg.c  update.c
man/: .cvsignore  .gitignore  822-date.1  ChangeLog  Makefile.am  Makefile.in  cleanup-info.8  deb-buildinfo.man  deb-buildinfo.pod  deb-changelog.5  deb-changelog.man  deb-changelog.pod  deb-changes.5  deb-changes.man  deb-changes.pod  deb-conffiles.5  deb-conffiles.man  deb-conffiles.pod  deb-control.5  deb-control.man  deb-control.pod  deb-email.pod  deb-extra-override.5  deb-extra-override.man  deb-extra-override.pod  deb-md5sums.pod  deb-old.5  deb-old.man  deb-old.pod  deb-origin.5  deb-origin.man  deb-origin.pod  deb-override.5  deb-override.man  deb-override.pod  deb-postinst.5  deb-postinst.man  deb-postinst.pod  deb-postrm.5  deb-postrm.man  (+152 more)
md5sum/: Makefile.am  Makefile.in  md5sum.1  md5sum.c
methods/: Makefile  Makefile.am  Makefile.in  disk.desc.cdrom  disk.desc.mounted  disk.install  disk.setup  disk.update  floppy.install  floppy.names  floppy.update  hd.setup  hd.unpack  hd.update
optlib/: Makefile  Makefile.am  Makefile.in  error.h  getdate.c  getopt.c  long-options.c
scripts/: .cvsignore  .gitignore  822-date.1  822-date.pl  Build.PL.in  Dpkg.pm  Makefile  Makefile.am  Makefile.in  README.cpan.in  cl-debian.pl  cl-dpkg  cleanup-info.8  cleanup-info.pl  controllib.pl  controllib.pl.in  debian-changelog-mode.el  dpkg-ar.pl  dpkg-architecture.1  dpkg-architecture.pl  dpkg-buildapi.pl  dpkg-buildflags.pl  dpkg-buildpackage.pl  dpkg-buildpackage.sh  dpkg-buildtree.pl  dpkg-changelog-mode.el  dpkg-checkbuilddeps.1  dpkg-checkbuilddeps.pl  dpkg-db-backup.sh  dpkg-distaddfile.pl  dpkg-divert.8  dpkg-divert.pl  dpkg-fsys-usrunmess.pl  dpkg-genbuildinfo.pl  dpkg-genchanges.pl  dpkg-gencontrol.pl  dpkg-gensymbols.pl  dpkg-gettext.pl  dpkg-maintscript-helper.sh  dpkg-mergechangelogs.pl  (+31 more)
split/: Makefile  Makefile.am  Makefile.in  debugmake  dpkg-split.8  dpkg-split.h  info.c  join.c  junk  main.c  mksplit  mksplit.pl  queue.c  split.c
src/: .gitignore  Makefile.am  Makefile.in  actions.h  archives.c  archives.h  bencode.c  bencode.h  cleanup.c  configure.c  depcon.c  divertcmd.c  divertdb.c  dpkg-db-backup.sh  dpkg-db-keeper.sh  dpkg-maintscript-helper.sh  dpkg-realpath.sh  enquiry.c  errors.c  file-match.c  file-match.h  filesdb-hash.c  filesdb.c  filesdb.h  filters.c  filters.h  force.c  force.h  glob.c  glob.h  help.c  infodb-access.c  infodb-format.c  infodb-upgrade.c  infodb.c  infodb.h  main.c  main.h  packages.c  pascal_str.c  (+22 more)
utils/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  configure.in  enoent.c  install-info.c  md5.c  md5sum.1  md5sum.c  start-stop-daemon.8  start-stop-daemon.c  update-alternatives.c  update-alternatives.polkit.in
(+2378 files in other folders)
